fix cart page z-index

--- a/styles/cart.scss
+++ b/styles/cart.scss
@@ -10,10 +10,12 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 .review_cart {
 	font-family: 'Montserrat', sans-serif;
 
-	.nav {	
+	.nav {
+
 
 		.upper_nav {
 			position: fixed;
+			z-index: 25;
 			top: 0;
 			width: 100%;
 			border-color: transparent;
@@ -40,7 +42,7 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 		background: white;
 		height: 100%;
 		z-index: 3;
-		padding: 20px;
+		padding: 50px 20px;
 
 		.return {
 			display: grid;
@@ -140,7 +142,7 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 
 	.placeOrder_overlay {
 	  position: fixed;
-	  z-index: 20;
+	  z-index: 26;
 	  top: 0;
 	  right: 0;
 	  height: 100vh;
@@ -152,7 +154,7 @@ $curve: cubic-bezier(0.650, 0.000, 0.450, 1.000);
 
 	.placeOrder_modal {
 		display: none;
-		z-index: 21;
+		z-index: 27;
 		position: fixed;
 		width: calc(100% - 40px);
 		margin:0 auto;
